include/equistore.h


#define EQS_SUCCESS 0
#define EQS_INVALID_PARAMETER_ERROR 1
#define EQS_BUFFER_SIZE_ERROR 254
#define EQS_INTERNAL_ERROR 255
typedef struct eqs_block_t eqs_block_t;
typedef struct eqs_tensormap_t eqs_tensormap_t;
typedef int32_t eqs_status_t;
typedef struct eqs_labels_t {
  const void *labels_ptr;
  const char *const *names;
  const int32_t *values;
  uintptr_t size;
  uintptr_t count;
} eqs_labels_t;
typedef uint64_t eqs_data_origin_t;
typedef struct eqs_sample_mapping_t {
  uintptr_t input;
  uintptr_t output;
} eqs_sample_mapping_t;
typedef struct eqs_array_t {
  void *ptr;
  eqs_status_t (*origin)(const void *array, eqs_data_origin_t *origin);
  eqs_status_t (*data)(const void *array, const double **data);
  eqs_status_t (*shape)(const void *array, const uintptr_t **shape, uintptr_t *shape_count);
  eqs_status_t (*reshape)(void *array, const uintptr_t *shape, uintptr_t shape_count);
  eqs_status_t (*swap_axes)(void *array, uintptr_t axis_1, uintptr_t axis_2);
  eqs_status_t (*create)(const void *array, const uintptr_t *shape, uintptr_t shape_count, struct eqs_array_t *new_array);
  eqs_status_t (*copy)(const void *array, struct eqs_array_t *new_array);
  void (*destroy)(void *array);
  eqs_status_t (*move_samples_from)(void *output, const void *input, const struct eqs_sample_mapping_t *samples, uintptr_t samples_count, uintptr_t property_start, uintptr_t property_end);
} eqs_array_t;
const char *eqs_last_error(void);
eqs_status_t eqs_labels_position(struct eqs_labels_t labels,
                                 const int32_t *values,
                                 uint64_t count,
                                 int64_t *result);
eqs_status_t eqs_register_data_origin(const char *name, eqs_data_origin_t *origin);
eqs_status_t eqs_get_data_origin(eqs_data_origin_t origin, char *buffer, uint64_t buffer_size);
struct eqs_block_t *eqs_block(struct eqs_array_t data,
                              struct eqs_labels_t samples,
                              const struct eqs_labels_t *components,
                              uintptr_t components_count,
                              struct eqs_labels_t properties);
eqs_status_t eqs_block_free(struct eqs_block_t *block);
struct eqs_block_t *eqs_block_copy(const struct eqs_block_t *block);
eqs_status_t eqs_block_labels(const struct eqs_block_t *block,
                              const char *values_gradients,
                              uintptr_t axis,
                              struct eqs_labels_t *labels);
eqs_status_t eqs_block_data(const struct eqs_block_t *block,
                            const char *values_gradients,
                            struct eqs_array_t *data);
eqs_status_t eqs_block_add_gradient(struct eqs_block_t *block,
                                    const char *parameter,
                                    struct eqs_array_t data,
                                    struct eqs_labels_t samples,
                                    const struct eqs_labels_t *components,
                                    uintptr_t components_count);
eqs_status_t eqs_block_gradients_list(struct eqs_block_t *block,
                                      const char *const **parameters,
                                      uint64_t *count);
struct eqs_tensormap_t *eqs_tensormap(struct eqs_labels_t keys,
                                      struct eqs_block_t **blocks,
                                      uint64_t blocks_count);
eqs_status_t eqs_tensormap_free(struct eqs_tensormap_t *tensor);
eqs_status_t eqs_tensormap_keys(const struct eqs_tensormap_t *tensor, struct eqs_labels_t *keys);
eqs_status_t eqs_tensormap_block_by_id(const struct eqs_tensormap_t *tensor,
                                       const struct eqs_block_t **block,
                                       uint64_t index);
eqs_status_t eqs_tensormap_block_selection(const struct eqs_tensormap_t *tensor,
                                           const struct eqs_block_t **block,
                                           struct eqs_labels_t selection);
eqs_status_t eqs_tensormap_keys_to_properties(struct eqs_tensormap_t *tensor,
                                              struct eqs_labels_t keys_to_move,
                                              bool sort_samples);
eqs_status_t eqs_tensormap_components_to_properties(struct eqs_tensormap_t *tensor,
                                                    const char *const *variables,
                                                    uint64_t variables_count);
eqs_status_t eqs_tensormap_keys_to_samples(struct eqs_tensormap_t *tensor,
                                           struct eqs_labels_t keys_to_move,
                                           bool sort_samples);